# yara_rule_engine

./: DATA_FLOW.md  README.md  pyproject.toml
.tmp/yara_eml_scan_553ca1b754b2479c9cb43dcd157c58fb/attachments/: rar_ntds_trigger.rar
.tmp/yara_eml_scan_8ff542473b534e26b8df0ddf90d9f72d/attachments/: macro_trigger_sample.docm
.tmp/yara_eml_scan_8ff542473b534e26b8df0ddf90d9f72d/unpacked_depth_1/macro_trigger_sample/word/: document.xml
.tmp/yara_eml_scan_a4a8d768c5a84b7cac71ddbc5d90db87/unpacked_depth_1/tiny_lnk_phish/: invoice.lnk
src/yara_eml_scanner/: __init__.py  api.py  cli.py  config.py  container_unpacker.py  eml_parser.py  file_types.py  logging_utils.py  models.py  pipeline.py  reporting.py  rule_loader.py  scanner.py  service.py
